--- a/velocity_controllers/package.xml
+++ b/velocity_controllers/package.xml
@@ -18,6 +18,7 @@
   <depend>rclcpp</depend>
   <depend>ros2_control</depend>
   <depend>pluginlib</depend>
+  <depend>eigen</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
