--- a/velocity_controllers/package.xml
+++ b/velocity_controllers/package.xml
@@ -19,6 +19,7 @@
   <depend>ros2_control</depend>
   <depend>pluginlib</depend>
   <depend>eigen</depend>
+  <depend>realtime_tools</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
